--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chalk": "~0.3.0"
   },
   "devDependencies": {
+    "grunt-contrib-jshint": "~0.6.0",
     "grunt": "~0.4.2"
   },
   "peerDependencies": {
