--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-liquibase",
   "description": "Simple integration of liquibase with grunt - specifically for postgresql",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "homepage": "https://github.com/cgreening/grunt-liquibase",
   "author": {
     "name": "Chris Greening",
@@ -38,6 +38,8 @@
     "grunt": "~0.4.2"
   },
   "keywords": [
-    "gruntplugin","liquibase","postgresql"
+    "gruntplugin",
+    "liquibase",
+    "postgresql"
   ]
 }
