--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.6.0",
-    "grunt": "~0.4.2"
+    "grunt": ">=0.4.5"
   },
   "keywords": [
     "gruntplugin",
