--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-liquibase",
   "description": "Simple integration of liquibase with grunt - specifically for postgresql",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "homepage": "https://github.com/cgreening/grunt-liquibase",
   "author": {
     "name": "Chris Greening",
@@ -33,6 +33,9 @@
   "devDependencies": {
     "grunt-contrib-jshint": "~1.0.0",
     "grunt": ">=0.4.5"
+  },
+  "peerDependencies": {
+    "grunt": ">=0.4.0"
   },
   "keywords": [
     "gruntplugin",
